fix(button): Update button outline variant styles for improved visibility
- Update accent colors on dark themes to colored versions
- Change default outline button variant tags

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -222,7 +222,7 @@
   --secondary-foreground: oklch(0.9462 0.0104 219.5909);
   --muted: oklch(0.3614 0.0157 43.0549);
   --muted-foreground: oklch(0.6643 0.0234 39.3293);
-  --accent: oklch(0.5990 0.0466 40.3236);
+  --accent: oklch(0.284 0.068 40.02);
   --accent-foreground: oklch(0.9851 0 0);
   --destructive: oklch(0.7036 0.1881 22.1462);
   --destructive-foreground: oklch(0.9851 0 0);
@@ -292,7 +292,7 @@
   --secondary-foreground: oklch(0.2178 0.0145 266.9051);
   --muted: oklch(0.3525 0.0182 268.1665);
   --muted-foreground: oklch(0.7090 0 0);
-  --accent: oklch(0.5026 0.0480 269.8289);
+  --accent: oklch(0.4109 0.1182 267.21);
   --accent-foreground: oklch(0.9851 0 0);
   --destructive: oklch(0.7036 0.1881 22.1462);
   --destructive-foreground: oklch(0.9851 0 0);
@@ -362,7 +362,7 @@
   --secondary-foreground: oklch(0.9284 0.0161 286.0812);
   --muted: oklch(0.3329 0.0106 91.6558);
   --muted-foreground: oklch(0.7090 0 0);
-  --accent: oklch(0.3753 0 0);
+  --accent: oklch(0.4839 0.0893 87.61);
   --accent-foreground: oklch(0.9851 0 0);
   --destructive: oklch(0.7036 0.1881 22.1462);
   --destructive-foreground: oklch(0.9851 0 0);
@@ -432,7 +432,7 @@
   --secondary-foreground: oklch(0.9763 0.0186 130.1746);
   --muted: oklch(0.3462 0.0273 306.1458);
   --muted-foreground: oklch(0.7090 0 0);
-  --accent: oklch(0.8422 0.0514 307.1800);
+  --accent: oklch(0.4028 0.1107 304.27);
   --accent-foreground: oklch(0.1240 0.0647 304.3241);
   --destructive: oklch(0.7036 0.1881 22.1462);
   --destructive-foreground: oklch(0.9851 0 0);
@@ -502,7 +502,7 @@
   --secondary-foreground: oklch(0.9851 0 0);
   --muted: oklch(0.3527 0.0159 190.2517);
   --muted-foreground: oklch(0.7090 0 0);
-  --accent: oklch(0.3706 0.0598 185.0568);
+  --accent: oklch(0.4338 0.074 181.9739);
   --accent-foreground: oklch(0.9851 0 0);
   --destructive: oklch(0.7036 0.1881 22.1462);
   --destructive-foreground: oklch(0.9851 0 0);
